@@ -4,10 +4,10 @@ class HiTrustReturnTest < Test::Unit::TestCase
   include ActiveMerchant::Billing::Integrations
 
   def test_successful_return
-    r = HiTrust::Return.new('retcode=0')
+    r = HiTrust::Return.new('order_id=&mscssid=&retcode=00&ordernumber=1138742&type=Auth')
     assert r.success?
     assert_equal HiTrust::Return::SUCCESS, r.params['retcode']
-    assert_equal HiTrust::Return::CODES['0'], r.message
+    assert_equal HiTrust::Return::CODES[HiTrust::Return::SUCCESS], r.message
   end
   
   def test_failed_return
